feat: add tailwind

--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "dev": "start-storybook -p 6006",
+    "build": "build-storybook",
+    "preview": "vite serve storybook-static"
   },
   "dependencies": {
     "vue": "^3.2.37"
