--- a/package.json
+++ b/package.json
@@ -1,17 +1,31 @@
 {
   "name": "@pegipegi/pegipegi-web-ui",
-  "private": true,
   "version": "0.0.0",
   "type": "module",
+  "types": "./dist/types/main.d.ts",
+  "files": [
+    "dist"
+  ],
+  "exports": {
+    ".": "./dist/main.js",
+    "./style": "./dist/style.css",
+    "./tailwind-preset": "./dist/tailwind.config.cjs"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
+  "repository": {
+    "url": "https://github.com/pegipegi/pegipegi-web-ui.git"
+  },
   "scripts": {
     "build-storybook": "build-storybook",
-    "build-library": "vite build",
+    "build-lib": "vue-tsc --noEmit && vite build && vue-tsc -p tsconfig.lib.json",
     "dev": "start-storybook -p 6006",
     "lint": "eslint src/**/*.{ts,tsx,vue}",
     "preview": "vite serve storybook-static",
     "prepare": "husky install"
   },
-  "dependencies": {
+  "peerDependencies": {
     "vue": "^3.2.37"
   },
   "devDependencies": {
@@ -38,6 +52,8 @@
     "tailwindcss": "^3.1.8",
     "typescript": "^4.7.4",
     "vite": "^3.0.7",
+    "vite-plugin-static-copy": "^0.8.0",
+    "vue": "^3.2.37",
     "vue-loader": "^16.8.3",
     "vue-tsc": "^0.39.5"
   }
