--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@storybook/builder-vite": "^0.2.2",
     "@storybook/testing-library": "^0.0.13",
     "@storybook/vue3": "^6.5.10",
+    "@types/uuid": "^8.3.4",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
@@ -62,5 +63,8 @@
     "vue": "^3.2.37",
     "vue-loader": "^16.8.3",
     "vue-tsc": "^0.39.5"
+  },
+  "dependencies": {
+    "uuid": "^9.0.0"
   }
 }
