--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prepublishOnly": "npm run build-lib"
   },
   "peerDependencies": {
+    "tailwindcss": "^3.1.8",
     "vue": "^3.2.37"
   },
   "devDependencies": {
