ci: update sonar-project.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.projectKey=pegipegi_pegipegi-web-ui
 sonar.organization=pegipegi
 sonar.sources=src
+sonar.test.inclusions=**/*.spec.ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
