--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@testing-library/vue": "^6.6.1",
     "@types/uuid": "^8.3.4",
     "@vitejs/plugin-vue": "^3.0.3",
+    "@vitejs/plugin-vue-jsx": "^2.0.1",
     "@vitest/coverage-c8": "^0.23.1",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
