--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
     "@babel/core": "^7.18.13",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
-    "@storybook/addon-actions": "^6.5.10",
-    "@storybook/addon-essentials": "^6.5.10",
-    "@storybook/addon-interactions": "^6.5.10",
-    "@storybook/addon-links": "^6.5.10",
+    "@storybook/addon-actions": "^6.5.12",
+    "@storybook/addon-essentials": "^6.5.12",
+    "@storybook/addon-interactions": "^6.5.12",
+    "@storybook/addon-links": "^6.5.12",
     "@storybook/builder-vite": "^0.2.2",
     "@storybook/testing-library": "^0.0.13",
-    "@storybook/vue3": "^6.5.10",
+    "@storybook/vue3": "^6.5.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^14.4.3",
     "@testing-library/vue": "^6.6.1",
@@ -61,6 +61,7 @@
     "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
     "eslint": "^8.22.0",
+    "eslint-plugin-storybook": "^0.6.4",
     "eslint-plugin-vue": "^9.4.0",
     "husky": "^8.0.0",
     "jsdom": "^20.0.0",
