--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "repository": {
     "url": "https://github.com/pegipegi/pegipegi-web-ui.git"
   },
+  "lint-staged": {
+    "*": "prettier --ignore-unknown --write"
+  },
   "scripts": {
     "dev": "start-storybook -p 6006",
     "build-lib": "vue-tsc --noEmit && vite build && vue-tsc -p tsconfig.lib.json",
@@ -65,6 +68,7 @@
     "eslint-plugin-vue": "^9.4.0",
     "husky": "^8.0.0",
     "jsdom": "^20.0.0",
+    "lint-staged": "^13.0.3",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8",
