--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@pegipegi/pegipegi-web-ui",
-  "version": "1.0.3",
+  "name": "@pegipegi/web-pegipegi-ui",
+  "version": "0.0.1",
   "type": "module",
   "types": "./dist/types/main.d.ts",
   "main": "./dist/main.umd.cjs",
@@ -13,8 +13,9 @@
       "import": "./dist/main.js",
       "require": "./dist/main.umd.cjs"
     },
-    "./style": "./dist/style.css",
-    "./tailwind-preset": "./dist/tailwind.config.cjs"
+    "./component-style": "./dist/style.css",
+    "./tailwind-style": "./dist/main.css",
+    "./tailwind-config": "./dist/tailwind.config.cjs"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
@@ -74,6 +75,7 @@
     "tailwindcss": "^3.1.8",
     "typescript": "^4.7.4",
     "vite": "^3.0.7",
+    "vite-plugin-dts": "^1.7.1",
     "vite-plugin-static-copy": "^0.8.0",
     "vitest": "^0.23.1",
     "vue": "^3.2.37",
