--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
     ".prettierrc": ".prettierignore",
     "package.json": "package-lock.json",
     "tsconfig.json": "tsconfig.*.json",
-    "cloudbuild.yml": "dockerfile, nginx.conf"
+    "cloudbuild.yml": "dockerfile, nginx.conf",
+    "tailwind.config.cjs": "postcss.config.cjs"
   },
   "files.associations": {
     "*.css": "tailwindcss"
