ci: update sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=pegipegi_pegipegi-web-ui
 sonar.organization=pegipegi
 sonar.sources=src
+sonar.exclusions=**/*.stories.tsx
 sonar.test.inclusions=**/*.spec.ts, **/*.spec.tsx
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
