feat: create bottomsheet

--- a/package.json
+++ b/package.json
@@ -75,5 +75,8 @@
     "vue": "^3.2.37",
     "vue-loader": "^16.8.3",
     "vue-tsc": "^0.39.5"
+  },
+  "dependencies": {
+    "@vueuse/core": "^9.6.0"
   }
 }
