--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,4 +15,5 @@ jobs:
           cache: 'npm'
           registry-url: https://npm.pkg.github.com/
       - run: npm ci
+      - run: npm version from-git
       - run: npm publish
