--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "test-coverage": "vitest run --coverage"
   },
   "peerDependencies": {
-    "tailwindcss": "^3.1.8",
     "@vueuse/core": "^9.7.0",
+    "tailwindcss": "^3.1.8",
     "vue": "^3.2.37"
   },
   "devDependencies": {
@@ -73,6 +73,7 @@
     "lint-staged": "^13.0.3",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.2.2",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.7.4",
     "vite": "^3.0.7",
