--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pegipegi/web-pegipegi-ui",
-  "version": "0.0.15",
+  "version": "1.0.0-beta.7",
   "type": "module",
   "types": "./dist/types/main.d.ts",
   "main": "./dist/main.umd.cjs",
@@ -46,6 +46,8 @@
     "@babel/core": "^7.20.12",
     "@commitlint/cli": "^17.4.3",
     "@commitlint/config-conventional": "^17.4.3",
+    "@nuxt/kit": "^3.2.3",
+    "@nuxt/module-builder": "^0.2.1",
     "@storybook/addon-actions": "^6.5.13",
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-interactions": "^6.5.16",
