--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pegipegi/web-pegipegi-ui",
-  "version": "1.0.0-beta.14",
+  "version": "1.0.0-beta.35",
   "type": "module",
   "files": [
     "dist"
@@ -45,7 +45,7 @@
   },
   "peerDependencies": {
     "@vueuse/core": "^9.7.0",
-    "tailwindcss": "^3.1.8",
+    "@nuxtjs/tailwindcss": "^6.3.1",
     "vue": "^3.2.37"
   },
   "devDependencies": {
