--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pegipegi/web-pegipegi-ui",
-  "version": "1.0.0-beta.35",
+  "version": "1.0.0-beta.36",
   "type": "module",
   "files": [
     "dist"
@@ -8,6 +8,7 @@
   "exports": {
     ".": {
       "main": "./dist/lib/lib.umd.cjs",
+      "types": "./dist/lib/lib.d.ts",
       "module": "./dist/lib/lib.js",
       "import": "./dist/lib/lib.js",
       "require": "./dist/lib/lib.umd.cjs"
