--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -6,6 +6,5 @@
     "declaration": true,
     "emitDeclarationOnly": true
   },
-  // TODO: expose module.ts types definitions in package.json
-  "include": ["./src/lib.ts", "./src/vite-env.d.ts", "./src/module.ts"]
+  "include": ["./src/lib.ts", "./src/vite-env.d.ts"]
 }
