--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pegipegi/web-pegipegi-ui",
-  "version": "1.0.0-beta.41",
+  "version": "1.0.0",
   "type": "module",
   "files": [
     "dist"
@@ -42,7 +42,7 @@
   },
   "peerDependencies": {
     "@vueuse/core": "^9.7.0",
-    "@nuxtjs/tailwindcss": "^6.3.1",
+    "tailwindcss": "^3.1.8",
     "vue": "^3.2.37"
   },
   "devDependencies": {
