chore: remove beta tag

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pegipegi/web-pegipegi-ui",
-  "version": "1.0.0-beta.42",
+  "version": "1.0.0",
   "type": "module",
   "files": [
     "dist"
